# LWS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindWayland.cmake
docs/: wayland-parity.md
src/LWS/include/LWS/: Cursor.hpp  CursorShape.hpp  DragAndDrop.hpp  Event.hpp  Export.hpp  KeyCode.hpp  MouseButton.hpp  Platform.hpp  Result.hpp  StringDefs.hpp  Window.hpp  WindowDisplayState.hpp
src/LWS/include/LWS/Wayland/: CursorBackendWayland.hpp  WindowBackendWayland.hpp  WindowWayland.hpp
src/LWS/include/LWS/Win32/: CursorBackendWin32.hpp  CursorWin32.hpp  EventWin32.hpp  WindowBackendWin32.hpp  WindowWin32.hpp  WindowsWin32.hpp
src/LWS/include/LWS/X11/: WindowBackendX11.hpp  WindowX11.hpp
src/LWS/include/LWS/facade/: Cursor.h  Cursor.hpp  DragAndDrop.hpp  Event.hpp  Platform.hpp  Result.hpp  Window.h  Window.hpp
src/LWS/include/LWS/interfaces/: backends.hpp
src/LWS/source/: Cursor.cpp  Platform.cpp  Window.cpp  framework.hpp
src/LWS/source/Examples/: example.cpp
src/LWS/source/Wayland/: CursorBackendWayland.cpp  PlatformDispatch.cpp  WindowBackendWayland.cpp  WindowWayland.cpp
src/LWS/source/Win32/: CursorBackendWin32.cpp  PlatformDispatch.cpp  WindowBackendWin32.cpp  WindowWin32.cpp
src/LWS/source/Win32/internal/: DragAndDropTarget.cpp  DragAndDropTarget.hpp  MonitorInfo.cpp  MonitorInfo.hpp  WindowPosHelper.hpp
src/LWS/source/X11/: WindowBackendX11.cpp
src/LWS/source/facade/: Cursor.cpp  Window.cpp  WindowWin32.cpp  WindowX11.cpp
tests/: test_unit.cpp  test_win32.cpp
